overflow scrolling tentatively fixed

--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -1,6 +1,7 @@
 html,
 body {
-  max-width: 100vw !important;
-  overflow-x: hidden !important;
+  position: fixed;
+  width: 100vh;
+  height: 100vh;
   background-color: #1a202c;
 }
